--- a/style/style.css
+++ b/style/style.css
@@ -49,90 +49,7 @@
   font-weight: 400;
 }
 
-/** глобальные стили для всего документа */
-
-* {
-  margin: 0;
-  padding: 0;
-  box-sizing: border-box;
-}
-
-.body {
-  font-family: "Roboto", sans-serif;
-  font-size: 16px;
-  font-style: normal;
-  line-height: 1.2;
-  font-weight: 400;
-}
-
-/** стили для header */
-
-.header {
-  display: flex;
-  justify-content: flex-end;
-  gap: 55px;
-  min-height: 135px;
-  text-align: center;
-  padding-top: 60px;
-  max-width: 1397px;
-  margin: auto;
-}
-
-@media screen and (max-width: 768px) {
-  .header {
-    display: none;
-  }
-}
-
-.header__link {
-  display: inline-block;
-  text-decoration: none;
-  color: #000000;
-  font-size: 24px;
-}
-
-@media screen and (max-width: 1440px) {
-  .header__link:last-child {
-    padding-right: 25px;
-  }
-}
-
-.header__link:hover {
-  text-decoration: underline;
-  opacity: 0.6;
-  transition: opacity 0.5s ease;
-}
-
-/** стили для hero-section */
-
-.hero {
-  position: relative;
-  margin: auto;
-  margin-bottom: 149px;
-  width: 100%;
-  background-image: url(../images/header.jpg);
-  background-size: cover;
-  min-height: 630px;
-}
-
-@media screen and (max-width: 990px) {
-  .hero {
-    max-width: 770px;
-    margin-bottom: 100px;
-  }
-}
-
-@media screen and (max-width: 768px) {
-  .hero {
-    max-width: 450px;
-    max-height: 420px;
-    background-image: url(../images/header_mobile.jpg);
-    min-height: 764px;
-    margin-bottom: 80px;
-  }
-}
-
-.hero__title {
+.title {
   font-family: "Playfair Display", serif;
   font-size: 86px;
   font-weight: 500;
@@ -140,707 +57,52 @@
 }
 
 @media screen and (max-width: 990px) {
-  .hero__title {
+  .title {
     font-size: 75px;
   }
 }
 
 @media screen and (max-width: 768px) {
-  .hero__title {
+  .title {
     font-size: 70px;
     font-weight: 400;
     margin-bottom: 15px;
   }
 }
 
-.hero__subtitle {
+.subtitle {
   font-size: 20px;
   font-weight: 500;
 }
 
 @media screen and (max-width: 768px) {
-  .hero__subtitle {
+  .subtitle {
     font-size: 18px;
   }
 }
 
-.hero__box {
-  background-color: #fff;
-  text-align: center;
+.box {
+  width: 49%;
+  height: 57%;
   position: absolute;
-  width: 56%;
-  min-height: 360px;
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
   padding: 110px 20px 110px 20px;
 }
 
-@media screen and (max-width: 990px) {
-  .hero__box {
-    width: 70%;
-    min-height: 280px;
-    padding: 80px 20px 80px 20px;
-  }
-}
-
 @media screen and (max-width: 768px) {
-  .hero__box {
-    width: 100%;
+  .box {
+    position: relative;
     min-height: 344px;
-    top: 22.5%;
-    padding: 110px 20px 110px 20px;
-  }
-}
-
-/** стили для biography-section */
-
-.biography {
-  position: relative;
-  display: flex;
-  flex-direction: row;
-  flex-wrap: nowrap;
-  justify-content: flex-start;
-  max-width: 1175px;
-  max-height: 840px;
-  margin: 0px auto 145px;
-}
-
-@media screen and (max-width: 990px) {
-  .biography {
-    flex-direction: column;
-    max-height: 952px;
-    max-width: 900px;
-    margin-bottom: 80px;
-  }
-}
-
-@media screen and (max-width: 450px) {
-  .biography {
-    max-width: 450px;
-    margin-bottom: 80px;
-  }
-}
-
-.biography__title {
-  font-size: 20px;
-  font-weight: 700;
-  transform: rotate(-180deg);
-  writing-mode: vertical-rl;
-  max-width: 23px;
-  max-height: 92px;
-  font-size: 20px;
-  font-weight: 700;
-  margin-left: 33px;
-}
-
-@media screen and (max-width: 990px) {
-  .biography__title {
-    order: -3;
-    display: inline-block;
-    position: absolute;
-    top: -5px;
-    left: 65%;
+    width: 100%;
+    top: 0%;
+    left: 0%;
     transform: none;
-    writing-mode: initial;
-    margin-left: 0px;
   }
-}
-
-.biography__author {
-  max-width: 220px;
-  font-family: "Playfair Display", serif;
-  font-size: 86px;
-  font-weight: 500;
-  line-height: 1.3;
-  margin-bottom: 25px;
-}
-
-@media screen and (max-width: 990px) {
-  .biography__author {
-    order: -1;
-    max-width: 100%;
-    font-size: 64px;
-  }
-
-  .biography__author::before {
-    content: "-"
-  }
-}
-
-.biography__job {
-  display: flex;
-  flex-direction: row;
-  flex-wrap: nowrap;
-  justify-content: flex-start;
-  gap: 5px;
-  margin-bottom: 36px;
-}
-
-@media screen and (max-width: 1200px) {
-  .biography__job {
-    flex-direction: column;
-  }
-}
-
-@media screen and (max-width: 990px) {
-  .biography__job {
-    order: -3;
-    margin-bottom: 57px;
-  }
-}
-
-.biography__job-item {
-  font-size: 18px;
-  font-weight: 500;
-  color: #0d0d0d;
-}
-
-.biography__job-item::before {
-  content: "/";
-  margin-right: 5px;
-}
-
-@media screen and (max-width: 1200px) {
-  .biography__job-item::before {
-    content: "-";
-  }
-}
-
-.biography__job-item:first-child::before {
-  content: "";
-  margin-right: 0px;
-}
-
-@media screen and (max-width: 1200px) {
-  .biography__job-item:first-child::before {
-    content: "-";
-    margin-right: 5px;
-  }
-}
-
-.biography__description {
-  font-family: "Bitter", serif;
-  font-size: 26px;
-  max-width: 449px;
-  color: #0d0d0d;
-}
-
-@media screen and (max-width: 990px) {
-  .biography__description {
-    order: -2;
-    font-size: 30px;
+  .image {
     max-width: 450px;
-    margin-bottom: 41px;
-  }
-}
-
-.biography__description::before {
-  display: block;
-  content: "";
-  width: 14px;
-  height: 4px;
-  background-color: #000000;
-  margin-bottom: 17px;
-}
-
-@media screen and (max-width: 990px) {
-  .biography__description::before {
-    display: none;
-  }
-}
-
-.biography__image {
-  max-height: 840px;
-}
-
-@media screen and (max-width: 990px) {
-  .biography__image {
-    max-height: 400px;
-  }
-}
-
-@media screen and (max-width: 990px) {
-  .biography__picture {
-    margin: 0px auto 0px auto;
-    max-width: 100%;
-  }
-}
-
-.biography__content {
-  max-width: 475px;
-  min-height: 507px;
-  align-self: center;
-  margin-left: 91px;
-  margin-right: 20px;
-}
-
-@media screen and (max-width: 990px) {
-  .biography__content {
-    order: -2;
-    display: flex;
-    flex-direction: column;
+    min-height: 420px;
     margin: auto;
   }
-}
-
-@media screen and (max-width: 450px) {
-  .biography__content {
-    padding-left: 18px;
-    max-width: 450px;
-  }
-}
-
-.biography__position {
-  font-size: 18px;
-  font-weight: 500;
-  color: #0d0d0d;
-}
-
-@media screen and (max-width: 990px) {
-  .biography__position {
-    order: -4;
-  }
-}
-
-/** стили для designers-section */
-
-.designers {
-  position: relative;
-  overflow: auto;
-  margin-left: 73px;
-  margin-bottom: 150px;
-  min-height: 660px;
-}
-
-@media screen and (max-width: 990px) {
-  .designers {
-    margin-left: 30px;
-    margin-bottom: 100px;
-  }
-}
-
-@media screen and (max-width: 768px) {
-  .designers {
-    margin-left: 18px;
-    min-height: 573px;
-    margin-bottom: 80px;
-    padding-top: 52px;
-  }
-}
-
-.designers__title {
-  display: inline-block;
-  position: absolute;
-  top: -20px;
-  left: 55%;
-  max-width: 91px;
-  transform: rotate(-90deg);
-  transform-origin: right bottom;
-  font-size: 20px;
-  font-weight: 700;
-}
-
-@media screen and (max-width: 1100px) {
-  .designers__title {
-    left: 580px;
-  }
-}
-
-@media screen and (max-width: 768px) {
-  .designers__title {
-    transform: none;
-    top: 0px;
-    left: 0px;
-    font-size: 18px;
-    margin-bottom: 32px;
-  }
-}
-
-.designers__line {
-  display: flex;
-  flex-direction: row;
-  flex-wrap: nowrap;
-  min-height: 619px;
-  gap: 30px;
-  align-items: flex-end;
-}
-
-@media screen and (max-width: 768px) {
-  .designers__line {
-    gap: 21px;
-    min-height: 520px;
-  }
-}
-
-.designers__item {
-  display: flex;
-  flex-direction: column;
-  flex-wrap: nowrap;
-  gap: 24px;
-  align-items: flex-end;
-}
-
-.designers__photo-container {
-  max-width: 320px;
-  max-height: 440px;
-  overflow: hidden;
-}
-
-.designers__photo-container_resized {
-  max-width: 640px;
-  max-height: 538px;
-  overflow: hidden;
-}
-
-.designers__photo {
-  display: block;
-}
-
-.designers__info {
-  min-width: 320px;
-}
-
-.designers__name {
-  text-transform: uppercase;
-  font-weight: 700;
-}
-
-.designers__from::before {
-  content: "From/ ";
-  font-weight: 700;
-}
-
-.designers__skills::before {
-  content: "Skills/ ";
-  font-weight: 700;
-}
-
-/** стили для testimonials-section */
-
-.testimonials {
-  display: flex;
-  flex-direction: column;
-  max-width: 1180px;
-  margin: auto;
-  margin-bottom: 134px;
-}
-
-@media screen and (max-width: 990px) {
-  .testimonials {
-    max-width: 770px;
-  }
-}
-
-@media screen and (max-width: 768px) {
-  .testimonials {
-    max-width: 450px;
-  }
-}
-
-.testimonials__title {
-  font-size: 20px;
-  font-weight: 700;
-  margin-bottom: 33px;
-}
-
-@media screen and (max-width: 768px) {
-  .testimonials__title {
-    align-self: flex-end;
-    margin-right: 18px;
-    max-width: 450px;
-    margin-bottom: 28px;
-  }
-}
-
-.testimonials__content {
-  display: grid;
-  grid-template-columns: 6% 44% 50%;
-}
-
-@media screen and (max-width: 990px) {
-  .testimonials__content {
-    display: flex;
-    flex-direction: column;
-    gap: 28px;
-  }
-}
-
-.testimonials__links {
-  display: flex;
-  flex-direction: row;
-  flex-wrap: wrap;
-  align-content: flex-end;
-  margin-bottom: 15px;
-  gap: 190px;
-}
-
-@media screen and (max-width: 990px) {
-  .testimonials__links {
-    max-width: 770px;
-    gap: 20px;
-    justify-content: center;
-    order: 2;
-  }
-}
-
-@media screen and (max-width: 768px) {
-  .testimonials__links {
-    max-width: 412px;
-    justify-content: flex-start;
-    margin-left: auto;
-    margin-right: auto;
-  }
-}
-
-.testimonials__link {
-  display: inline-block;
-  max-width: 186px;
-  text-decoration: none;
-  color: #000000;
-  transform: rotate(-90deg);
-  transform-origin: top left;
-  font-size: 16px;
-}
-
-@media screen and (max-width: 990px) {
-  .testimonials__link {
-    display: block;
-    max-width: 186px;
-    transform: none;
-  }
-}
-
-.testimonials__link:hover {
-  opacity: 0.8;
-  transition: opacity 0.5s ease;
-}
-
-.testimonials__mission {
-  align-self: center;
-  justify-self: center;
-}
-
-.testimonials__quote {
-  max-width: 221px;
-  text-align: center;
-  margin-bottom: 42px;
-  font-family: "Bitter", serif;
-  font-size: 32px;
-}
-
-@media screen and (max-width: 990px) {
-  .testimonials__quote {
-    max-width: 342px;
-    margin-left: auto;
-    margin-right: auto;
-  }
-}
-
-.testimonials__image_size_large {
-  max-width: 515px;
-}
-
-@media screen and (max-width: 990px) {
-  .testimonials__image_size_large {
-    display: none;
-  }
-}
-
-.testimonials__subtitle {
-  font-weight: 700;
-}
-
-/** стили для strong-point-section */
-
-.strengths {
-  max-width: 1537px;
-  min-height: 665px;
-  margin-bottom: 80px;
-  overflow: auto;
-}
-
-.strengths__title {
-  display: inline-block;
-  margin-left: 255px;
-  transform: rotate(-90deg);
-  transform-origin: right top;
-  font-size: 20px;
-  font-weight: 700;
-}
-
-@media screen and (max-width: 1180px) {
-  .strengths__title {
-    margin-left: 16px;
-    transform: none;
-  }
-}
-
-@media screen and (max-width: 768px) {
-  .strengths__title {
-    font-size: 18px;
-    margin-bottom: 30px;
-  }
-}
-
-.strengths__content {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  flex-direction: row;
-  flex-wrap: nowrap;
-  gap: 30px;
-  align-items: flex-end;
-}
-
-@supports (display: grid) {
-  .strengths__content {
-    display: -ms-grid;
-    display: grid;
-    -ms-grid-columns: auto 30px auto 30px auto 30px auto;
-    grid-template-columns: repeat(4, auto);
-    -webkit-box-align: end;
-    -ms-flex-align: end;
-    align-items: end;
-    gap: 30px;
-  }
-}
-
-@media screen and (max-width: 768px) {
-  .strengths__content {
-    gap: 17px;
-  }
-}
-
-.strengths__image {
-  min-width: 350px;
-  min-height: 525px;
-}
-
-.strengths__links {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  min-height: 665px;
-  min-width: 395px;
-}
-
-@media screen and (max-width: 1180px) {
-  .strengths__links {
-    order: -1;
-    min-height: 550px;
-    min-width: 300px;
-  }
-}
-
-@media screen and (max-width: 768px) {
-  .strengths__links {
-    min-height: 453px;
-    min-width: 201px;
-    margin-left: 16px;
-  }
-}
-
-.strengths__subtitle {
-  margin-bottom: 35px;
-  font-family: "Playfair Display", serif;
-  font-size: 86px;
-  font-weight: 500;
-  line-height: 1.33;
-}
-
-@media screen and (max-width: 1180px) {
-  .strengths__subtitle {
-    margin-bottom: 24px;
-    font-size: 60px;
-  }
-}
-
-@media screen and (max-width: 768px) {
-  .strengths__subtitle {
-    margin-bottom: 24px;
-    font-size: 46px;
-    line-height: 1;
-  }
-}
-
-.strengths__list {
-  list-style: none;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  flex-direction: column;
-  flex-wrap: nowrap;
-  gap: 3px;
-  min-width: 229px;
-}
-
-@media screen and (max-width: 768px) {
-  .strengths__list {
-    gap: 8px;
-    min-width: 201px;
-    margin-bottom: 20px;
-    margin-left: 16px;
-  }
-}
-
-.strengths__item {
-  font-family: "Bitter", serif;
-  font-size: 32px;
-}
-
-@media screen and (max-width: 768px) {
-  .strengths__item {
-    font-size: 24px;
-  }
-}
-
-.strengths__link {
-  color: #000000;
-  text-decoration: none;
-}
-
-.strengths__link:hover {
-  text-decoration: underline;
-  opacity: 0.8;
-  transition: opacity 0.5s ease;
-}
-
-/** стили для footer */
-
-.footer__menu {
-  display: none;
-  width: 100%;
-}
-
-@media screen and (max-width: 768px) {
-  .footer__menu {
-    display: flex;
-    flex-direction: row;
-    justify-content: space-around;
-    align-items: center;
-    position: sticky;
-    z-index: 100;
-    bottom: 0;
-    background-color: #fff;
-    border: 2px solid #000000;
-    width: 100%;
-    min-height: 82px;
-  }
-}
-
-.footer__link {
-  display: block;
-  font-family: "Butler", serif;
-  font-size: 40px;
-  text-decoration: none;
-  color: #000000;
-}
-
-.footer__link:hover {
-  text-decoration: underline;
-  opacity: 0.6;
-  transition: opacity 0.5s ease;
 }
