--- a/src/index.css
+++ b/src/index.css
@@ -1,9 +1,11 @@
+@import url('./vendor/normalize.css');
+
 /** подключение шрифтов */
 
 @font-face {
   font-family: "Roboto";
   src: local("Roboto Regular"), local("Roboto-Regular"),
-    url("./Roboto/Roboto-Regular.ttf") format("ttf");
+    url("./vendor/fonts/Roboto/Roboto-Regular.ttf") format("ttf");
   font-style: normal;
   font-weight: 400;
 }
@@ -11,7 +13,7 @@
 @font-face {
   font-family: "Roboto";
   src: local("Roboto Medium"), local("Roboto-Medium"),
-    url("./Roboto/Roboto-Medium.ttf") format("ttf");
+    url("./vendor/fonts/Roboto/Roboto-Medium.ttf") format("ttf");
   font-style: normal;
   font-weight: 500;
 }
@@ -19,7 +21,7 @@
 @font-face {
   font-family: "Roboto";
   src: local("Roboto Bold"), local("Roboto-Bold"),
-    url("./Roboto/Roboto-Bold.ttf") format("ttf");
+    url("./vendor/fonts/Roboto/Roboto-Bold.ttf") format("ttf");
   font-style: normal;
   font-weight: 700;
 }
@@ -27,7 +29,7 @@
 @font-face {
   font-family: "Playfair Display";
   src: local("Playfair Display"), local("PlayfairDisplay"),
-    url("./PlayfairDisplay/PlayfairDisplay-VariableFont_wght.ttf") format("ttf");
+    url("./vendor/fonts/PlayfairDisplay/PlayfairDisplay-VariableFont_wght.ttf") format("ttf");
   font-style: normal;
   font-weight: 500;
 }
@@ -35,7 +37,7 @@
 @font-face {
   font-family: "Bitter";
   src: local("Bitter"),
-    url("./Bitter/Bitter-VariableFont_wght.ttf") format("ttf");
+    url("./vendor/fonts/Bitter/Bitter-VariableFont_wght.ttf") format("ttf");
   font-style: normal;
   font-weight: 400;
 }
@@ -43,8 +45,8 @@
 @font-face {
   font-family: "Butler";
   src: local("Butler"),
-    url("../vendor/fonts/Butler/Butler.woff2") format("woff2"),
-    url("../vendor/fonts/Butler/Butler.woff") format("woff");
+    url("./vendor/fonts/Butler/Butler.woff2") format("woff2"),
+    url("./vendor/fonts/Butler/Butler.woff") format("woff");
   font-style: normal;
   font-weight: 400;
 }
@@ -71,11 +73,13 @@
   display: flex;
   justify-content: flex-end;
   gap: 55px;
-  min-height: 135px;
-  text-align: center;
-  padding-top: 60px;
+  box-sizing: border-box;
   max-width: 1397px;
+  max-height: 135px;
   margin: auto;
+  padding-top: 53.5px;
+  padding-bottom: 53.5px;
+  text-align: center;
 }
 
 @media screen and (max-width: 768px) {
@@ -91,12 +95,6 @@
   font-size: 24px;
 }
 
-@media screen and (max-width: 1440px) {
-  .header__link:last-child {
-    padding-right: 25px;
-  }
-}
-
 .header__link:hover {
   text-decoration: underline;
   opacity: 0.6;
@@ -108,9 +106,9 @@
 .hero {
   position: relative;
   margin: auto;
-  margin-bottom: 149px;
+  margin-bottom: 150px;
   width: 100%;
-  background-image: url(../images/header.jpg);
+  background-image: url(./images/header.jpg);
   background-size: cover;
   min-height: 630px;
 }
@@ -126,54 +124,26 @@
   .hero {
     max-width: 450px;
     max-height: 420px;
-    background-image: url(../images/header_mobile.jpg);
+    background-image: url(./images/header_mobile.jpg);
     min-height: 764px;
     margin-bottom: 80px;
   }
 }
 
-.hero__title {
-  font-family: "Playfair Display", serif;
-  font-size: 86px;
-  font-weight: 500;
-  margin-bottom: 15px;
-}
-
-@media screen and (max-width: 990px) {
-  .hero__title {
-    font-size: 75px;
-  }
-}
-
-@media screen and (max-width: 768px) {
-  .hero__title {
-    font-size: 70px;
-    font-weight: 400;
-    margin-bottom: 15px;
-  }
-}
-
-.hero__subtitle {
-  font-size: 20px;
-  font-weight: 500;
-}
-
-@media screen and (max-width: 768px) {
-  .hero__subtitle {
-    font-size: 18px;
-  }
-}
-
 .hero__box {
-  background-color: #fff;
-  text-align: center;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  gap: 14px;
   position: absolute;
-  width: 56%;
-  min-height: 360px;
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
-  padding: 110px 20px 110px 20px;
+  width: 48.5%;
+  max-width: 690px;
+  min-height: 360px;
+  background-color: #fff;
+  text-align: center;
 }
 
 @media screen and (max-width: 990px) {
@@ -189,7 +159,38 @@
     width: 100%;
     min-height: 344px;
     top: 22.5%;
-    padding: 110px 20px 110px 20px;
+    padding: 98px 32px 98px 32px;
+  }
+}
+
+.hero__title {
+  font-family: "Playfair Display", serif;
+  font-size: 86px;
+  font-weight: 500;
+  margin: 0;
+}
+
+@media screen and (max-width: 990px) {
+  .hero__title {
+    font-size: 75px;
+  }
+}
+
+@media screen and (max-width: 768px) {
+  .hero__title {
+    font-size: 70px;
+    font-weight: 400;
+  }
+}
+
+.hero__subtitle {
+  font-size: 20px;
+  font-weight: 500;
+}
+
+@media screen and (max-width: 768px) {
+  .hero__subtitle {
+    font-size: 18px;
   }
 }
 
@@ -201,9 +202,9 @@
   flex-direction: row;
   flex-wrap: nowrap;
   justify-content: flex-start;
-  max-width: 1175px;
+  max-width: 1165px;
   max-height: 840px;
-  margin: 0px auto 145px;
+  margin: 0px auto 150px;
 }
 
 @media screen and (max-width: 990px) {
@@ -215,20 +216,31 @@
   }
 }
 
-@media screen and (max-width: 450px) {
-  .biography {
-    margin-bottom: 80px;
+.biography__image {
+  max-width: 571px;
+}
+
+@media screen and (max-width: 990px) {
+  .biography__image {
+    max-height: 400px;
+    width: 100%;
+  }
+}
+
+@media screen and (max-width: 990px) {
+  .biography__picture {
+    margin: 0px auto 0px auto;
   }
 }
 
 .biography__title {
-  font-size: 20px;
+  font-size: 24px;
   font-weight: 700;
   transform: rotate(-180deg);
   writing-mode: vertical-rl;
   max-width: 23px;
-  max-height: 92px;
-  margin-left: 33px;
+  max-height: 115px;
+  margin-left: 29px;
 }
 
 @media screen and (max-width: 990px) {
@@ -244,13 +256,36 @@
   }
 }
 
+.biography__content {
+  max-width: 455px;
+  align-self: center;
+  margin-left: 87px;
+  padding-right: 10px;
+}
+
+@media screen and (max-width: 990px) {
+  .biography__content {
+    order: -2;
+    display: flex;
+    flex-direction: column;
+    margin: auto;
+  }
+}
+
+@media screen and (max-width: 450px) {
+  .biography__content {
+    padding-left: 18px;
+    max-width: 450px;
+  }
+}
+
 .biography__author {
   max-width: 220px;
+  margin-bottom: 36px;
   font-family: "Playfair Display", serif;
   font-size: 86px;
   font-weight: 500;
   line-height: 1.3;
-  margin-bottom: 25px;
 }
 
 @media screen and (max-width: 990px) {
@@ -262,6 +297,18 @@
 
   .biography__author::before {
     content: "-"
+  }
+}
+
+.biography__position {
+  font-size: 18px;
+  font-weight: 500;
+  color: #0d0d0d;
+}
+
+@media screen and (max-width: 990px) {
+  .biography__position {
+    order: -4;
   }
 }
 
@@ -291,6 +338,7 @@
   font-size: 18px;
   font-weight: 500;
   color: #0d0d0d;
+  white-space: nowrap;
 }
 
 .biography__job-item::before {
@@ -319,7 +367,7 @@
 .biography__description {
   font-family: "Bitter", serif;
   font-size: 26px;
-  max-width: 449px;
+  max-width: 455px;
   color: #0d0d0d;
 }
 
@@ -335,10 +383,10 @@
 .biography__description::before {
   display: block;
   content: "";
-  width: 14px;
-  height: 4px;
+  width: 20px;
+  height: 6px;
   background-color: #000000;
-  margin-bottom: 17px;
+  margin-bottom: 18px;
 }
 
 @media screen and (max-width: 990px) {
@@ -347,68 +395,13 @@
   }
 }
 
-.biography__image {
-  max-width: 47%;
-  max-height: 840px;
-}
-
-@media screen and (max-width: 990px) {
-  .biography__image {
-    max-height: 400px;
-    width: 100%;
-  }
-}
-
-@media screen and (max-width: 990px) {
-  .biography__picture {
-    margin: 0px auto 0px auto;
-  }
-}
-
-.biography__content {
-  max-width: 475px;
-  min-height: 507px;
-  align-self: center;
-  margin-left: 91px;
-  margin-right: 20px;
-}
-
-@media screen and (max-width: 990px) {
-  .biography__content {
-    order: -2;
-    display: flex;
-    flex-direction: column;
-    margin: auto;
-  }
-}
-
-@media screen and (max-width: 450px) {
-  .biography__content {
-    padding-left: 18px;
-    max-width: 450px;
-  }
-}
-
-.biography__position {
-  font-size: 18px;
-  font-weight: 500;
-  color: #0d0d0d;
-}
-
-@media screen and (max-width: 990px) {
-  .biography__position {
-    order: -4;
-  }
-}
-
 /** стили для designers-section */
 
 .designers {
-  position: relative;
   overflow: auto;
-  margin-left: 73px;
+  min-height: 677px;
+  margin-left: 20px;
   margin-bottom: 150px;
-  min-height: 660px;
 }
 
 @media screen and (max-width: 990px) {
@@ -428,14 +421,9 @@
 }
 
 .designers__title {
-  display: inline-block;
-  position: absolute;
-  top: -20px;
-  left: 55%;
-  max-width: 91px;
-  transform: rotate(-90deg);
-  transform-origin: right bottom;
-  font-size: 20px;
+  margin-left: 119px;
+  margin-bottom: 30px;
+  font-size: 24px;
   font-weight: 700;
 }
 
@@ -459,8 +447,7 @@
   display: flex;
   flex-direction: row;
   flex-wrap: nowrap;
-  min-height: 619px;
-  gap: 30px;
+  gap: 20px;
   align-items: flex-end;
 }
 
@@ -480,23 +467,24 @@
 }
 
 .designers__photo-container {
-  max-width: 320px;
+  max-width: 336px;
   max-height: 440px;
   overflow: hidden;
 }
 
 .designers__photo-container_resized {
-  max-width: 640px;
+  max-width: 572px;
   max-height: 538px;
   overflow: hidden;
 }
 
 .designers__photo {
   display: block;
+  min-width: 336px;
 }
 
 .designers__info {
-  min-width: 320px;
+  min-width: 336px;
 }
 
 .designers__name {
@@ -517,16 +505,15 @@
 /** стили для testimonials-section */
 
 .testimonials {
-  display: flex;
-  flex-direction: column;
-  max-width: 1180px;
-  margin: auto;
-  margin-bottom: 134px;
+  position: relative;
+  max-width: 1163px;
+  margin: 0px auto 150px;
 }
 
-@media screen and (max-width: 990px) {
+@media screen and (max-width: 1165px) {
   .testimonials {
-    max-width: 770px;
+    max-width: 990px;
+    margin-bottom: 80px;
   }
 }
 
@@ -537,28 +524,40 @@
 }
 
 .testimonials__title {
-  font-size: 20px;
-  font-weight: 700;
+  max-width: 28px;
+  max-height: 140px;
   margin-bottom: 33px;
+  font-size: 24px;
+  font-weight: 700;
+  transform: rotate(-180deg);
+  writing-mode: vertical-rl;
+  margin-left: 24px;
+}
+
+@media screen and (max-width: 990px) {
+  .testimonials__title {
+    align-self: flex-end;
+    margin-right: 18px;
+    max-width: 150px;
+    margin-bottom: 28px;
+    transform: none;
+    writing-mode: horizontal-tb;
+  }
 }
 
 @media screen and (max-width: 768px) {
   .testimonials__title {
     align-self: flex-end;
-    margin-right: 18px;
-    max-width: 450px;
-    margin-bottom: 28px;
+    margin-right: 0;
   }
 }
 
 .testimonials__content {
-  display: grid;
-  grid-template-columns: 6% 44% 50%;
+  display: flex;
 }
 
 @media screen and (max-width: 990px) {
   .testimonials__content {
-    display: flex;
     flex-direction: column;
     gap: 28px;
   }
@@ -566,19 +565,23 @@
 
 .testimonials__links {
   display: flex;
-  flex-direction: row;
-  flex-wrap: wrap;
-  align-content: flex-end;
-  margin-bottom: 15px;
-  gap: 190px;
+  flex-direction: column;
+  justify-content: flex-end;
+  width: 98px;
+  gap: 203px;
+  margin-bottom: 30px;
+  padding-left: 41px;
 }
 
 @media screen and (max-width: 990px) {
   .testimonials__links {
-    max-width: 770px;
+    flex-direction: row;
     gap: 20px;
     justify-content: center;
     order: 2;
+    width: 750px;
+    margin: 0 auto;
+    padding-left: 0;
   }
 }
 
@@ -586,6 +589,7 @@
   .testimonials__links {
     max-width: 412px;
     justify-content: flex-start;
+    flex-wrap: wrap;
     margin-left: auto;
     margin-right: auto;
   }
@@ -593,13 +597,13 @@
 
 .testimonials__link {
   display: inline-block;
-  max-width: 186px;
+  max-width: 190px;
+  height: 57px;
   text-decoration: none;
   color: #000000;
-  transform: rotate(-90deg);
-  transform-origin: top left;
-  transition: opacity 0.5s ease;
-  font-size: 16px;
+  transform: rotate(-180deg);
+  writing-mode: vertical-rl;
+  text-align: start;
 }
 
 @media screen and (max-width: 990px) {
@@ -607,6 +611,7 @@
     display: block;
     max-width: 186px;
     transform: none;
+    writing-mode: horizontal-tb;
   }
 }
 
@@ -615,8 +620,27 @@
 }
 
 .testimonials__mission {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
   align-self: center;
   justify-self: center;
+  width: 39%;
+  max-width: 451px;
+  margin-left: 91px;
+}
+
+@media screen and (max-width: 1163px) {
+  .testimonials__mission {
+    margin-left: 30px;
+  }
+}
+
+@media screen and (max-width: 990px) {
+  .testimonials__mission {
+    min-width: 418px;
+    margin-left: 0;
+  }
 }
 
 .testimonials__quote {
@@ -625,6 +649,13 @@
   margin-bottom: 42px;
   font-family: "Bitter", serif;
   font-size: 32px;
+}
+
+
+@media screen and (max-width: 1165px) {
+  .testimonials__quote {
+    font-size: 30px;
+  }
 }
 
 @media screen and (max-width: 990px) {
@@ -636,7 +667,9 @@
 }
 
 .testimonials__image_size_large {
-  max-width: 515px;
+  max-width: 451px;
+  min-height: 760px;
+  margin-left: 20px;
 }
 
 @media screen and (max-width: 990px) {
@@ -652,18 +685,24 @@
 /** стили для strong-point-section */
 
 .strengths {
-  max-width: 1537px;
-  min-height: 665px;
-  margin-bottom: 80px;
+  max-width: 1518px;
+  min-height: 613px;
   overflow: auto;
+  padding-left: 20px;
+  margin: 0px auto 139px;
+}
+
+@media screen and (max-width: 768px) {
+  .strengths {
+    padding-left: 16px;
+  }
 }
 
 .strengths__title {
   display: inline-block;
-  margin-left: 255px;
-  transform: rotate(-90deg);
-  transform-origin: right top;
-  font-size: 20px;
+  margin-left: 238px;
+  margin-bottom: 30px;
+  font-size: 24px;
   font-weight: 700;
 }
 
@@ -676,32 +715,18 @@
 
 @media screen and (max-width: 768px) {
   .strengths__title {
+    margin-left: 0;
     font-size: 18px;
     margin-bottom: 30px;
   }
 }
 
 .strengths__content {
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
   flex-direction: row;
   flex-wrap: nowrap;
-  gap: 30px;
+  gap: 21px;
   align-items: flex-end;
-}
-
-@supports (display: grid) {
-  .strengths__content {
-    display: -ms-grid;
-    display: grid;
-    -ms-grid-columns: auto 30px auto 30px auto 30px auto;
-    grid-template-columns: repeat(4, auto);
-    -webkit-box-align: end;
-    -ms-flex-align: end;
-    align-items: end;
-    gap: 30px;
-  }
 }
 
 @media screen and (max-width: 768px) {
@@ -711,18 +736,23 @@
 }
 
 .strengths__image {
-  min-width: 350px;
-  min-height: 525px;
+  min-width: 335px;
+  min-height: 554px;
+}
+
+@media screen and (max-width: 768px) {
+  .strengths__image {
+    max-width: 310px;
+    max-height: 450px;
+  }
 }
 
 .strengths__links {
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
   flex-direction: column;
   align-items: center;
-  min-height: 665px;
-  min-width: 395px;
+  min-height: 554px;
+  min-width: 451px;
 }
 
 @media screen and (max-width: 1180px) {
@@ -735,18 +765,18 @@
 
 @media screen and (max-width: 768px) {
   .strengths__links {
-    min-height: 453px;
+    min-height: 432px;
     min-width: 201px;
-    margin-left: 16px;
+    align-self: flex-start;
   }
 }
 
 .strengths__subtitle {
-  margin-bottom: 35px;
+  margin-bottom: 28px;
   font-family: "Playfair Display", serif;
   font-size: 86px;
   font-weight: 500;
-  line-height: 1.33;
+  line-height: 1;
 }
 
 @media screen and (max-width: 1180px) {
@@ -766,13 +796,11 @@
 
 .strengths__list {
   list-style: none;
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
   flex-direction: column;
   flex-wrap: nowrap;
-  gap: 3px;
-  min-width: 229px;
+  min-width: 216px;
+  max-height: 422px;
 }
 
 @media screen and (max-width: 768px) {
@@ -786,7 +814,8 @@
 
 .strengths__item {
   font-family: "Bitter", serif;
-  font-size: 32px;
+  font-size: 34px;
+  line-height: 1.23;
 }
 
 @media screen and (max-width: 768px) {
