--- a/src/index.css
+++ b/src/index.css
@@ -123,6 +123,7 @@
   .hero {
     max-width: 770px;
     margin-bottom: 100px;
+    background-image: url(./images/header.jpg);
   }
 }
 
@@ -130,9 +131,9 @@
   .hero {
     max-width: 450px;
     max-height: 420px;
-    background-image: url(./images/header_mobile.jpg);
     min-height: 764px;
     margin-bottom: 80px;
+    background-image: url(./images/header_mobile.jpg);
   }
 }
 
@@ -259,6 +260,12 @@
     transform: none;
     writing-mode: initial;
     margin-left: 0px;
+  }
+}
+
+@media screen and (max-width: 768px) {
+  .biography__title {
+    font-size: 18px;
   }
 }
 
@@ -555,6 +562,7 @@
   .testimonials__title {
     align-self: flex-end;
     margin-right: 0;
+    font-size: 18px;
   }
 }
 
